<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NearJoin</string>
    <string name="action_settings">Settings</string>
    <string name="login_title">NearJoin Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>

    <string name="permission_launch_activity"> This permission allows launching an activity in this application </string>
    <string name="exit">Exit</string>
    <string name="new_account">New Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="title_activity_event__description">Event_Description</string>
    <string name="title_activity_my">Event Description</string>
    <string name="title_activity_category_screen">CategoryScreen</string>
    <string name="title_activity_new_event">NewEventActivity</string>
    <string name="title_activity_event_listing">EventListingActivity</string>
    <string name="title_post_event_activity">Post New Event</string>


    <string name="map_label_text">Map</string>
    <string name="list_label_text">List</string>
    <string name="post_label_text">Post</string>
    <string name="settings_label_text">Settings</string>

    <string name="study_image_description">study image</string>
    <string name="sport_image_description">sport image</string>
    <string name="entertainment_image_description">entertainment image</string>
    <string name="others_image_description">others image</string>

    <string name="study_label_text">Study</string>
    <string name="sport_label_text">Sport</string>
    <string name="entertainment_label_text">Entertainment</string>
    <string name="others_label_text">Others</string>

    <string name="cancel_post_event_button_text">Cancel</string>
    <string name="post_post_event_button_text">Post</string>
    <string name="attendance_post_event_button_text">Attendance</string>

    <string name="title_post_event_text">Title (*): </string>
    <string name="time_post_event_text">Time (*): </string>
    <string name="duration_post_event_text">Duration (*): </string>
    <string name="location_post_event_text">Location (*): </string>
    <string name="category_post_event_text">Category: </string>
    <string name="phone_post_event_text">Phone: </string>
    <string name="description_post_event_text">Description: </string>
    <string name="participants_browse_event_text">Participants: </string>

    <string name="host_image_description">Host Image Description</string>

    <string name = "title_activity_settings">Settings</string>
    <string-array name="Categories">
    <item></item>
    <item>Study</item>
    <item>Sports</item>
    <item>Entertainment</item>
    <item>Other</item>
</string-array>

    <string-array name="Duration">
        <item></item>
        <item>Less Than 30 Minutes</item>
        <item>30 Minutes to an Hour</item>
        <item>1-2 Hours</item>
        <item>More Than 2 Hours</item>
    </string-array>

</resources>
