<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title_post_event_text"
            android:id="@+id/textView2"
            android:layout_weight="0.20" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:id="@+id/title_browse_event_editText"
            android:layout_weight="0.64" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/time_post_event_text"
            android:id="@+id/textView6"
            android:layout_weight="0.57" />

        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/browse_event_timePicker" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/duration_post_event_text"
            android:id="@+id/textView7"
            android:layout_weight="0.32" />

        <Spinner
            android:layout_width="206dp"
            android:layout_height="38dp"
            android:id="@+id/duration_browse_event_spinner"
            android:layout_weight="0.13" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/location_post_event_text"
            android:id="@+id/textView8"
            android:layout_weight="0.10" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:id="@+id/location_browse_event_editText"
            android:layout_weight="0.73" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/category_post_event_text"
            android:id="@+id/textView9"
            android:layout_weight="0.33" />

        <Spinner
            android:layout_width="161dp"
            android:layout_height="35dp"
            android:id="@+id/category_browse_event_spinner"
            android:layout_weight="0.35" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/phone_post_event_text"
            android:id="@+id/textView13"
            android:layout_weight="0.64" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phone_browse_event_editText" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/description_post_event_text"
            android:id="@+id/textView14"
            android:layout_weight="0.08" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="66dp"
            android:id="@+id/description_browse_event_editText"
            android:layout_weight="0.77" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="127dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/participants_browse_event_text"
            android:id="@+id/textView15"
            android:layout_weight="0.07" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:id="@+id/participants_browse_event_editText"
            android:layout_weight="0.76" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_browse_event_button"
            android:onClick="onClick"
            android:text="@string/cancel_post_event_button_text" />

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/post_post_event_button_text"
            android:id="@+id/post_browse_event_button"
            android:onClick="onClick"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/attendance_post_event_button_text"
            android:id="@+id/check_attendance_browse_event_button"
            android:onClick="onClick" />
    </LinearLayout>

</LinearLayout>