<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.04"
        android:weightSum="1"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:id="@+id/map_layout"
            android:onClick="onClick">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/map_label_text"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:id="@+id/list_layout"
            android:onClick="onClick">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/list_label_text"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:id="@+id/post_layout"
            android:onClick="onClick">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/post_label_text"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:id="@+id/settings_layout"
            android:onClick="onClick">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/settings_label_text"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:id="@+id/event_content_fragment"
        android:orientation="horizontal">
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/search_layout"
        android:layout_weight="0.1">

        <SearchView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/searchView"
            android:onClick="onClick" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/search_editText"
            android:layout_weight="1"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:weightSum="1"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:weightSum="1"
            android:id="@+id/study_layout"
            android:onClick="onClick">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="0dp"
                android:id="@+id/study_imageView"
                android:layout_weight="0.94"
                android:layout_gravity="center"
                android:contentDescription="@string/study_image_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/study_label_text"
                android:id="@+id/study_textView"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:id="@+id/sport_layout"
            android:weightSum="1"
            android:onClick="onClick">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="0dp"
                android:id="@+id/sport_imageView"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:contentDescription="@string/sport_image_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/sport_label_text"
                android:id="@+id/sport_textView"
                android:layout_gravity="center_horizontal|bottom" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:weightSum="1"
            android:id="@+id/entertainment_layout"
            android:onClick="onClick">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="0dp"
                android:id="@+id/entertainment_imageView"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:contentDescription="@string/entertainment_image_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/entertainment_label_text"
                android:id="@+id/entertainment_textView"
                android:layout_gravity="center_horizontal|bottom" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:weightSum="1"
            android:id="@+id/others_layout"
            android:onClick="onClick">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="0dp"
                android:id="@+id/others_imageView"
                android:layout_weight="1.02"
                android:layout_gravity="center"
                android:contentDescription="@string/others_image_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/others_label_text"
                android:id="@+id/others_textView"
                android:layout_gravity="center" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>