<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="47dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title_post_event_text"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title_post_event_editText"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/textView7"
            android:layout_alignParentEnd="true"
            android:inputType="text"
            android:layout_weight="0.81" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="140dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/time_post_event_text"
            android:id="@+id/textView2"
            android:layout_below="@+id/title_post_event_editText"
            android:layout_alignParentStart="true" />

        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/browse_event_timePicker" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="81dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/duration_post_event_text"
            android:id="@+id/textView6"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true" />

        <Spinner
            android:layout_width="144dp"
            android:layout_height="37dp"
            android:id="@+id/duration_spinner"
            android:layout_weight="1.47" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="82dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/location_post_event_text"
            android:id="@+id/textView7"
            android:layout_below="@+id/textView6"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/location_browse_event_editText"
            android:layout_alignTop="@+id/textView7"
            android:layout_toEndOf="@+id/textView7"
            android:layout_alignParentEnd="true" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="47dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/category_post_event_text"
            android:id="@+id/textView8"
            android:layout_toStartOf="@+id/browse_event_timePicker"
            android:layout_centerVertical="true" />

        <Spinner
            android:layout_width="165dp"
            android:layout_height="40dp"
            android:id="@+id/category_spinner"
            android:spinnerMode="dialog"
            android:layout_toEndOf="@+id/cancel_post_event_button"
            android:layout_above="@+id/phone_browse_event_editText"
            android:layout_weight="0.32" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="62dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/phone_post_event_text"
            android:id="@+id/textView9"
            android:layout_above="@+id/textView13"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="56dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phone_browse_event_editText"
            android:layout_alignBottom="@+id/textView9"
            android:layout_alignEnd="@+id/browse_event_timePicker"
            android:layout_weight="0.15"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="133dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/description_post_event_text"
            android:id="@+id/textView13"
            android:layout_alignTop="@+id/description_post_event_editText"
            android:layout_toStartOf="@+id/description_post_event_editText" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/description_post_event_editText"
            android:layout_above="@+id/post_post_event_button"
            android:layout_alignLeft="@+id/post_post_event_button" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel_post_event_button_text"
            android:id="@+id/cancel_post_event_button"
            android:layout_toEndOf="@+id/textView9"
            android:layout_alignParentBottom="true"
            android:onClick="onClick" />

        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/post_post_event_button_text"
            android:id="@+id/post_post_event_button"
            android:onClick="onClick"
            android:layout_alignParentBottom="true"
            android:layout_alignEnd="@+id/description_post_event_editText"
            android:layout_marginRight="75dp" />
    </LinearLayout>

</LinearLayout>