<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textSize="15.5sp"
    android:padding="20dip">
    android:orientation="horizontal"
    android:padding="20dip" >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/login_title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"/>
        <TextView
            android:text="@string/enter_username"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="left"/>
        <EditText
            android:id="@+id/username_text"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="Enter Password"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="left"/>
        <EditText
            android:id="@+id/password_text"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/login_button"
            android:text="Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/cancel_button"
            android:text="Exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/new_user_button"
            android:text="New User"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/sign_up" />
    </LinearLayout>
</ScrollView>
